--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
-
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <title>Welcome to My Website</title> 
+    <style> 
+        body { 
+            font-family: Arial, sans-serif; 
+            line-height: 1.6; 
+        } 
+        header, nav, section, article, aside, footer { 
+            margin: 10px 0; 
+        } 
+        nav a { 
+            margin-right: 15px; 
+            text-decoration: none; 
+            color: blue; 
+        } 
+        nav a:hover { 
+            text-decoration: underline; 
+        } 
+    </style> 
+</head> 
+<body> 
+    <header> 
+	<h1>Rohith J</h1>
+	<h1>23BDS1125</h1>
+	<h1>9th Jan 2025</h1>
+        <h2>Welcome to My Website</h2> 
+        <p>Your one-stop destination for information and resources</p> 
+    </header> 
+    <nav> 
+        <a href="#">Home</a> 
+        <a href="#">About</a> 
+        <a href="#">Services</a> 
+        <a href="#">Contact</a> 
+    </nav> 
+    <section> 
+        <article> 
+            <h2>Main Article</h2> 
+            <p>This is the main content of the page. Here, you can include articles, blog posts, or any other 
+important information you want to highlight.</p> 
+            <p>HTML5 introduces semantic elements that help structure a webpage more clearly and 
+improve accessibility.</p> 
+        </article> 
+        <aside> 
+            <h3>Related Links</h3> 
+            <ul> 
+                <li><a href="#">HTML Tutorial</a></li> 
+                <li><a href="#">CSS Basics</a></li> 
+                <li><a href="#">JavaScript Guide</a></li> 
+</ul> 
+</aside> 
+</section> 
+<footer> 
+<p>&copy; 2025 My Website. All rights reserved.</p> 
+</footer> 
+<br>
+<br>
+<h1>HTML Code Example with Special Tags</h1> 
+    <p>Here are some examples of various HTML tags used in coding:</p> 
+ 
+    <h2>Using <code>&lt;code&gt;</code> Tag</h2> 
+    <p>Example of inline code: <code>&lt;h1&gt;Hello, World!&lt;/h1&gt;</code></p> 
+ 
+    <h2>Using <code>&lt;kbd&gt;</code> Tag</h2> 
+    <p>To save your work, press <kbd>Ctrl</kbd> + <kbd>S</kbd>.</p> 
+ 
+    <h2>Using <code>&lt;samp&gt;</code> Tag</h2> 
+    <p>Sample output from a program: <samp>Error: File not found</samp></p> 
+ 
+    <h2>Using <code>&lt;var&gt;</code> Tag</h2> 
+<p>The variable <var>x</var> equals 10.</p> 
+<h2>Using <code>&lt;pre&gt;</code> Tag</h2> 
+<pre> 
+function helloWorld() { 
+console.log('Hello, World!'); 
+} 
+helloWorld(); 
+</pre>
+<br>
+<br>
+<frameset rows="70%,30%"> 
+<frame src="https://www.example.com" name="frame1"> 
+<frame src="frame2.html" name="frame2"> 
+</frameset> 
+<noframes> 
+<body>Your browser does not support frames.</body> 
+</noframes>  
+<iframe src="https://www.wikipedia.org" width="100%" height="400px"></iframe>
+<br>
+<br>
+<svg width="200" height="300" viewBox="0 0 200 300" xmlns="http://www.w3.org/2000/svg"> 
+        <circle cx="100" cy="220" r="50" fill="white" stroke="black" stroke-width="3"/> 
+        <circle cx="100" cy="140" r="40" fill="white" stroke="black" stroke-width="3"/> 
+        <circle cx="100" cy="70" r="30" fill="white" stroke="black" stroke-width="3"/> 
+        <circle cx="90" cy="60" r="5" fill="black"/> 
+        <circle cx="110" cy="60" r="5" fill="black"/> 
+        <polygon points="100,70 120,75 100,80" fill="orange"/> 
+        <path d="M 85 85 Q 100 95 115 85" stroke="black" stroke-width="3" fill="none"/> 
+        <line x1="60" y1="140" x2="10" y2="100" stroke="brown" stroke-width="5"/> 
+        <line x1="140" y1="140" x2="190" y2="100" stroke="brown" stroke-width="5"/> 
+        <circle cx="100" cy="110" r="5" fill="black"/> 
+        <circle cx="100" cy="140" r="5" fill="black"/> 
+        <circle cx="100" cy="170" r="5" fill="black"/> 
+ 
+        
+    </svg>
+<br>
+<br>
+<svg width="200" height="300" xmlns="http://www.w3.org/2000/svg"> 
+  <!-- Body --> 
+  <ellipse cx="100" cy="200" rx="50" ry="80" fill="black" /> 
+  
+  <!-- Face --> 
+  <circle cx="100" cy="120" r="40" fill="black" /> 
+  
+  <circle cx="60" cy="80" r="40" fill="black" /> 
+  <circle cx="140" cy="80" r="40" fill="black" /> 
+  <!-- Eyes --> 
+<circle cx="85" cy="120" r="10" fill="white" /> 
+<circle cx="115" cy="120" r="10" fill="white" /> 
+<circle cx="85" cy="120" r="5" fill="black" /> 
+<circle cx="115" cy="120" r="5" fill="black" /> 
+</svg>
+</body> 
+</html>
